feat: Integration von 'spring graphql'